src/style.css
body {
  padding-top: 12px;
  font-family: "Ubuntu", sans-serif;
  font-size: 14px;
  color: #555;
}
text, .container {
  font-family: "Ubuntu", sans-serif;
}
.container {
  height: 1140px;
}

[class*="col-"], footer {
  border: 0px solid white;
  border-radius: 6px;
  line-height: 40px;
  text-align: center;
}

.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
  border: 1px solid #636363;
}

ul {
    list-style: outside none none;
}

.headings {
  font-size: 20px;
  padding-left: 20px;
  color: #565656;
  text-align: left;
}

#logo_BNP {
  text-align: center; 
  left: -43px; 
}
#logo_GCP {
  text-align: center; 
  left: 257px;
}
#logo_CDP {
  text-align: center; 
  left: 590px; 
}
.footerClass {
  position: relative;
  top: -140px;
}

/*--------------------------*/
/* buttons and menus */
.nytg-sort li {
	background: none repeat scroll 0 0 #f9f9f9;
	border-bottom: 1px solid #ccc;
	border-left: 1px solid #ccc;
	border-right: 1px solid #ccc;
	border-top: 1px solid #ccc;
	color: #555;
  font-weight: bold;
	cursor: pointer;
	float: left;
	font-size: 12px;
	margin: 2;
	padding: 0px 9px;
	border-radius: 6px 6px 6px 6px;
}
/*drop-down menu*/
.dropbtn {
  background-color: none repeat scroll 0 0 #f9f9f9;
  border: 1px solid #ccc;
  color: #555;
  cursor: pointer;
  font-size: 12px;
  padding: 0px 4px;
  border-radius: 4px 4px 4px 4px;
  text-align: center;
  margin: auto;
  width: 70px;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 100px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    width: 200px;
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: #555;
    padding: 0px 4px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: lightgrey}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
    background-color: lightgrey;
}

/*--------------------------*/
/*tooltips */
/*Used for barChart rects */
div.tooltip-bar {
  position: absolute;
  height: 46px;
  width: 175px;
  padding: 6px;
  background: #8A979D;
  color: #000;
  border-radius: 4px;
  border-color: #5E554D;
  font-size: 12px;
  font-weight: bold;
}
.tooltip-legend {
  position: absolute;
  height: 50px;
  width: 350px;
  padding: 6px;
  background: #F7F6E4;
  color: #555;
  border-radius: 4px;
  font-size: 12px;
}

div.tooltip {
  position: absolute;
  text-align: left;
  top: 536px;
  left: 1030px;
  width: 150px;
  height: 60px;
  padding: 6px;
  /*font: 12px sans-serif;*/
  font-size: 12px;
  background: #F7F6E4;
  color: #555;
  border: 0px;
  border-radius: 4px;
  pointer-events: none;
}

#pageTitle {
  text-align: center;
  left: 60px;
  padding-bottom: 5px;
}

/*--------------------------*/
/* map */
#mapResetButton {
  position: absolute;
  left: 1038px; 
  top: -43px;
}
.worldcountry {
  fill: rgb(24, 71, 27);
  stroke: #555;
  stroke-width: 1.5;
}
.worldcity {
  stroke: #555;
}
.cityactive {
  fill: #20f216 !important;
}
.cityfade {
  opacity: 0.2  !important;
}
.countryfade {
  opacity: 0.2 !important;
}
.groupEastAsia {
  fill: #d15081;
}
.groupNAmer {
  fill: #c398db;
}
.groupEurope {
  fill: #80c2ff;
} 
.groupLatinAmer {
  fill: #ee8370;
}
.groupSEAsia {
  fill: #2b8f00;
}
.groupSAsia {
  fill: #40d5c7;
}
.groupAfrica {
  fill: #fcc751;
}
.groupOceania {
  fill: #ffa5ca;
}
.groupNAfrica {
  fill: #bbd15d;
}
.NAfricaWAsia {
  fill: rgb(187, 209, 93);
}
.horsService {
  fill: none;
}

/* to allow x-axis labels to overflow past div bd */
.data svg {
  overflow: visible;
}

div.rtooltip {
      position: absolute;
      text-align: left;
      width: 190px;
      height: 110px;
      padding: 2px;
      font: 8px;
      background: #EEE4C5;
      border: 0px;
      border-radius: 8px;
      pointer-events: none;
}

/*intro*/
#infoText {
  font-size: 14px;
  line-height: 1.2;
  padding-bottom: 8px;
}

.stroke {
  fill: none;
  stroke: #555;
  stroke-width: 1px;
}
.fill {
  fill: #555;
}
.graticule {
  fill: none;
  stroke: #555;
  stroke-width: .5px;
  stroke-opacity: .5;
}
.land {
  fill: #222;
}
.boundary {
  fill: none;
  stroke: #555;
  stroke-width: .5px;
}

/*--------------------------*/
/* bar chart */
.bar-group .active {
  stroke: #363636 !important;
}
.bar-group .fade {
  opacity: 0.3 !important;
}
.isNan {
/*  fill: none;*/
  stroke: black;
}
.barMarker marker {
  fill: #555;
}
.barMarker path {
  stroke: #555;
}
.offscaleText {
  fill: #565656;
}

.headingClass { /* svg stylings */
  font-family: Ubuntu, sans-serif;
  font-weight: bold;
  font-size: 17px;
  color: #565656;
}
#h1 {
  left: 100px;
  top: -20px;
}
#h2 {
  left: 120px;
  top: -66px;
}
#h3 {
  left: -201px;
  top: -113px;
}
#h4 {
  left: -50px;
  top: -113px;
}
#h5, #h6, #h7, #h8, #h9 {
  top: -142px;
}
#h5 {
  left: 109px;
}
#h6 {
  left: 204px;
}
#h7 {
  left: 158px;
}
#h8 {
  left: 89px;
}
#h9 {
  left: 17px;
}

.yaxLabel {
  font-size: 17px;
  fill: #565656;
}

#barChartCaption {
  color: #565656;
  text-align: left;
  font-size: 18px;
  position: absolute;
  top: 395px;
  left: 775px;
}


.textLabels {
  fill: #636363;
}

.barChartTitle {
  color: #565656;
  font-size: 14px;
  font-weight: bold;
  padding-left: 23px;
  text-align: left;
}

.hideTick {
  opacity: 0;
}
.hideTick text {
  opacity: 0;
}
.axis {
  font: 11px sans-serif;
}
.x.axis text {
  fill: #4b4242;
}
#barChart_groupEastAsia .x.axis text {
  font-size: 12px;
}
.x.axis text{
  font-size: 10px;
}
#barChart_groupEastAsia .enlarged {
  font-size: 16px !important;
  stroke: #000;
}
#barChart_groupRow3 .enlarged {
  font-size: 11px !important;
  stroke: #000;
}
.enlarged {
  font-size: 14px !important;
  stroke: #000;
}
.fadeText {
  opacity:  0.3;
}

/* barChart legend */
#selector {
  margin-left: -80px;
}
.legendText {
  fill: rgb(86, 86, 86);
  stroke: none;
  font-size: 12px;
  display: inline;
}
.legendCB {
  margin-left: -220px;
}
#dropdownMenu {
  margin-left: -81px;
  margin-top: -11px;
  color: #565656;
  text-align: left;
}
label {
  font-family: Ubuntu, sans-serif;
  position: absolute;
  top: -13px;
  left: 27px;
  font-weight: 500 !important
}
#barChartLegend {
  position: relative;
  top: -14px;
  left: 60px;
  stroke: gray;
}
#barChartLegendUnits {
  text-align: left;
  font-size: 11px;
  padding-left: 0px;
  left: 160px;
  top: -2px;
  color: #636363;
}

/*--------------------------*/
/* city card */
#cityCardg rect {
  fill: #c7d1d9;
  stroke: none;
}

.titlerow {
  margin-top: -300px;
  font-weight: bold;
  font-size: 16px;
  color: #00563c;
  stroke: none;
  /*text-shadow: 0 0 5px #333333;*/
  text-align: center;
  /*margin-left: 19px;*/
  /*text-decoration-line: underline; */
}

.subrow, .updated {
  font-size: 15px;
  stroke: none;
  color: #00563c;
  text-align: left;
  margin-left: 41px;
}

.updated.row2, .updated.row4, .updated.row6, .updated.row8, .updated.row10, .subrow.row6, .subrow.row8, .subrow.row10 {
  margin-top: -21px;
  color: #00563c;
}
.updated.row1, .updated.row3, .updated.row5, .updated.row7, .updated.row9, .subrow.row5, .subrow.row7, .subrow.row9 {
  text-transform: uppercase;
  margin-top: -11px;
  color: #3b112d;
  font-weight: bold;
  font-size: 14px;
}

.cityCardSubrowTitle {
  font-weight: 700;
  font-size: 11px;
  stroke: none;
  fill: #fff500; /* #ffaa1b; */
  text-shadow: 0 0 5px #333333;
  text-transform: uppercase;
  text-align: right;
}
.cityCardAttr {
  font-size: 11px;
  stroke: none;
  fill: #fff;
  text-align: right;
}


.style("text-transform", "uppercase")

td, th {
  padding: 1px 4px;
  font-size: 14px;
}

